assets/css/mapControls.styl
// MAP CONTROLS VIEW STYLES
// ---------------------------------------------------------------

#map-controls
    background overlayBackground
    border overlayBorder
    border-bottom 0
    border-right 0
    position fixed
    right 0
    top 42px
    width mapControlsWidth
    z-index 6

    input[type="text"]
        margin-left 3px

    select
        margin-left 3px

    &.hidden
        background url('../images/ico-mapcontrols.png') no-repeat
        border 0
        cursor pointer
        height 32px !important
        margin-right 1px
        margin-top 5px
        padding 0
        width 32px !important

    &.hidden *
        display none

    .topmargin
        margin-top 26px

    .close
        margin-top 2px

    .hidden
        display none

    // The map controls tab headers (Properties, Details, Related, Events, etc...).
    .tab-header
        background rgba(100, 100, 100, 0.5)
        font-size 1.2em
        user-select none
        -webkit-user-select none

        // Each tab is a H4 element.
        h4
            color rgba(180, 180, 180, 0.5)
            cursor pointer
            display inline-block
            font-weight normal
            margin 0 1px 0 0
            padding 4px 12px 7px 12px

            // Highlight the active tab.
            &.active
                background tabHighlightColor
                border-bottom 3px solid tabBorderColor
                color inherit
                padding-bottom 3px

    // The map controls tab container.
    .tab
        overflow auto
        padding 1px 2px 2px 2px

        // Sub headers inside the tabs are H5 elements.
        > h5
            background rgba(100, 100, 100, 0.3)
            border-bottom 1px solid tabHighlightColor
            font-size 90%
            margin 0 0 2px 0
            padding 5px 6px 5px 6px

        // Errors and warnings are shown with a H6 element.
        > h6
            background rgba(100, 100, 100, 0.3)
            border-bottom 1px solid tabHighlightColor
            font-size 90%
            margin 0 0 2px 0
            padding 5px 6px 5px 6px

        // Tab panels (blocks of contents below each H5).
        .panel
            padding 4px
            margin-bottom 10px

            // Each row of information / fields is inside a div.
            div
                margin-bottom 2px

        .preview
            border 1px solid rgba(1, 1, 1, 1)
            display inline-block
            height 11px
            left -20px
            position relative
            top 2px
            width 9px

        .control-label
            clear left
            display inline-block
            width 110px

    .undo
        color rgba(250, 100, 80, 1)

    input.grid-size
        margin-right 4px
        width 49px

    span.grid-size
        margin-right 12px

// THe "identify z-index" button.
#map-ctl-zindex-identify
    background-image url(../images/but-identify.png)
    margin-right 5px

// The "export to SVG" button.
#map-ctl-export-svg
    background-image url(../images/but-export.png)

// The map "delete" buttons.
#map-ctl-delete, #map-ctl-shape-delete
    background-image url(../images/but-delete.png)

// The map "confirm delete" buttons.
#map-ctl-confirmdelete, #map-ctl-shape-confirmdelete
    background-image url(../images/but-confirm.png)

// Link source arrow style selector.
#map-ctl-link-arrow-source
    font-size 130%
    text-align left
    width 39px

// Link target arrow style selector.
#map-ctl-link-arrow-target
    font-size 130%
    text-align right
    width 39px

// The "shape's title" select box.
#map-ctl-displayprops
    padding-right 8px

// The zoom div on the bottom right of the screen.
#map-ctl-zoom
    bottom -1px
    position fixed
    right 1px
    z-index 7
    user-select none
    -webkit-user-select none

    // Each zoom icon (one with -, another with +).
    img
        cursor pointer
        padding-bottom 3px
        vertical-align middle

// The zoom indicator with a right margin to the zoom icons.
#map-ctl-zoom-span
    margin-right 5px

// Entity tab showing a list of entity objects available.
#map-ctl-tab-entities

    // The search icon on top of the search field.
    img.search
        opacity 0.4
        position absolute
        right 11px
        top 35px

    ul
        display block
        list-style-type none
        overflow auto
        margin 8px 0 0 0
        padding 0
        user-select none
        -webkit-user-select none

        li
            background-position 6px center
            background-repeat no-repeat
            border 1px solid rgba(80, 80, 80, 1)
            cursor pointer
            display block
            list-style-type none
            margin 1px 5px 5px 1px
            padding 5px

            &:hover
                background-color rgba(80, 80, 80, 1)

            span
                color highlightColor


            span.type
                float left
                font-size 65%
                margin-right 12px
                margin-top 3px

            span.count
                float right

        .shape-dragger
            background-position 6px 5px !important
            opacity 0.6
            position fixed
            z-index 10

            // Hide shape count while dragging.
            .count
                display none

    // When map is disabled, do not show mouse pointer on the list
    ul.disabled li
        cursor default !important

// The search field on the entities tab.
#map-entity-list-search
    margin-left 1px !important
    user-select text !important
    width 96%


// TAB: SHAPE
// ---------------------------------------------------------------

#map-ctl-tab-shape
    input[type="text"]
        width 124px

    .toggle
        margin-left 3px

    // The medium sized select boxes (border width, font size, opacity).
    select.medium
        width 107px

    // The stack level div.
    #map-ctl-shape-zindex
        user-select none
        -webkit-user-select none

        label
            display block
            margin 10px 0 6px 0
            width auto
        div
            border 1px solid rgba(200, 200, 200, 0.9)
            cursor pointer
            display inline-block
            margin 0 4px 0 1px
            padding 2px
            text-align center
            width 18px
        .active
            background rgba(120, 220, 130, 0.1)
            color rgba(120, 220, 130, 1)
            cursor default
            border 1px solid rgba(60, 150, 70, 1)

    .disabled *
        cursor default !important

// The shape "Events" panel.
#map-ctl-shape-events
    input[type="checkbox"]
        margin-right 4px
        opacity 1 !important
        position relative !important

    // Add an alert icon on active alerts.
    .active
        background url(../images/ico-warning.png) no-repeat 98% center
        padding-right 20px

// The "Inspector" tab.
#map-ctl-tab-inspector

    overflow auto

    .panel
        overflow auto

        // Force margin bottom on each attribute line.
        div
            margin-bottom 6px !important

        // The attribute names.
        label
            margin-right 12px
            min-width 100px

        // The attribute values.
        span
            color highlightColor
            font-style italic

#map-ctl-inspector-attributes
    max-height 80%

